Fix overflow-x

--- a/src/styles/core/body.scss
+++ b/src/styles/core/body.scss
@@ -1,10 +1,10 @@
 body {
   margin: 0;
   position: relative;
-  height: 100vh;
   width: 100vw;
-  background: url("../assets/background.png");
-  background-size: cover;
+  overflow-x: hidden;
+  background: url("../assets/background.png") repeat;
+  background-size: contain;
   font-family: $font-family-base;
   color: $text-color;
 
