--- a/src/styles/core/section.scss
+++ b/src/styles/core/section.scss
@@ -2,7 +2,7 @@ section {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
